# sdnsite

./: .gitignore  README.md  pyproject.toml
apps/accounts/: admin.py  models.py
apps/accounts/migrations/: 0001_initial.py
apps/comments/: admin.py  models.py
apps/comments/migrations/: 0001_initial.py
apps/content/: admin.py  managers.py  signals.py  urls.py  views.py
apps/content/management/commands/: check_infra.py  seed_content_types.py
apps/content/migrations/: 0001_initial.py  0002_search_vector_gin_indexes.py
apps/content/models/: __init__.py  content_item.py  content_relation.py  content_type_def.py  revision_log.py  source_reference.py
apps/content/templatetags/: content_tags.py
apps/search/migrations/: __init__.py
apps/sync/: admin.py  apps.py  models.py  tasks.py
apps/sync/migrations/: 0001_initial.py
apps/taxonomy/: admin.py  apps.py  models.py
apps/taxonomy/migrations/: 0001_initial.py
config/: celery.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
static/css/: main.css
staticfiles/: staticfiles.json
staticfiles/css/: main.css
templates/: base.html  home.html
templates/content/: _pagination.html  browse.html  detail_base.html
tests/: conftest.py  factories.py  test_admin_jsonb.py  test_infra.py  test_models.py  test_seed.py  test_templatetags.py  test_views.py
